feat(vault): craete "create vault" handler and reafactor user handler, add crypto params for user
