# internal/models/user.go
@@ -4,6 +4,8 @@ type User struct {
 	Login        string `json:"login" db:"login"`
 	PasswordHash string `json:"-" db:"passhash"`
 	KeyHash      string `json:"-" db:"key_hash"`
+	EncryptedTag string `json:"encrypted_tag" db:"encrypted_tag"`
+	Salt         string `json:"salt" db:"salt"`
 	ID           int    `json:"id" db:"id"`
 }
 
@@ -12,6 +14,8 @@ type UserReq struct {
 	Password     string `json:"password" db:"-"`
 	PasswordHash string `json:"-" db:"passhash"`
 	KeyHash      string `json:"-" db:"key_hash"`
+	EncryptedTag string `json:"encrypted_tag" db:"encrypted_tag"`
+	Salt         string `json:"salt" db:"salt"`
 }
 
 type UserChangePasswordReq struct {
@@ -22,4 +26,15 @@ type UserChangePasswordReq struct {
 
 type APIKeyRes struct {
 	Key string `json:"key"`
+}
+
+type UserLogin struct {
+	Login        string `json:"login" db:"login"`
+	Password     string `json:"password" db:"-"`
+	PasswordHash string `json:"-"`
+}
+
+type CryptoParamsRes struct {
+	EncryptedTag string `json:"encrypted_tag"`
+	Salt         string `json:"salt"`
 }
