# internal/server/service/valid/user.go
@@ -1,8 +1,11 @@
 package valid
 
 import (
+	"encoding/base64"
 	"regexp"
 
+	"github.com/LekcRg/GophKeeper/internal/crypto"
+	"github.com/LekcRg/GophKeeper/internal/errs"
 	"github.com/LekcRg/GophKeeper/internal/models"
 	validation "github.com/go-ozzo/ozzo-validation/v4"
 )
@@ -43,14 +46,36 @@ func loginField(login *string) *validation.FieldRules {
 	)
 }
 
+func salt(value any) error {
+	b64salt, ok := value.(string)
+	if !ok {
+		return errs.ErrSaltNotValid
+	}
+
+	salt, err := base64.StdEncoding.DecodeString(b64salt)
+	if err != nil {
+		return errs.ErrSaltMustBase64
+	}
+
+	if len(salt) != crypto.SaltLen {
+		return errs.ErrSaltNotValidLen
+	}
+
+	return nil
+}
+
 func Register(user *models.UserReq) error {
 	return validation.ValidateStruct(user,
 		loginField(&user.Login),
 		passwordField(&user.Password),
+		validation.Field(&user.Salt,
+			validation.Required,
+			validation.By(salt)),
+		validation.Field(&user.EncryptedTag, validation.Required),
 	)
 }
 
-func Login(user *models.UserReq) error {
+func Login(user *models.UserLogin) error {
 	return validation.ValidateStruct(user,
 		validation.Field(&user.Login, validation.Required),
 		validation.Field(&user.Password, validation.Required),
